# websocket-rs

./: Cargo.toml  LICENSE  README.md
src/: connection.rs  error.rs  gateway.rs  handshake.rs  lib.rs  message.rs
tests/: autobahn-testsuite.sh
tests/config/: fuzzingclient.json  fuzzingserver.json
