[package]
name = "websocket"
version = "0.1.0"
edition = "2024"
authors = ["Francisco Braço-Forte <f.s.f.b2001@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/franciscosbf/websocket-rs"

[dependencies.tokio]
version = "1.44.2"
features = ["rt", "net", "rt-multi-thread", "io-util", "sync"]

[dependencies.futures-util]
version = "0.3.31"

[dependencies.httparse]
version = "1.10.1"

[dependencies.sha1]
version = "0.10.6"

[dependencies.base64]
version = "0.22.1"

[dependencies.bytes]
version = "1.10.1"

[dependencies.rand]
version = "0.9.1"

[dependencies.thiserror]
version = "2.0.12"

[dependencies.flume]
version = "0.11.1"
features = ["async"]

[dev-dependencies.tokio]
version = "1"
features = ["macros"]

[dev-dependencies.claim]
version = "0.5.0"
